* Wed Nov 06 2019 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 2.5.1-0
- Defined values for EL8 in data in modules.
- Updated Gemfile versions to ones that support EL8.
- Updated metadata.json to include support for CentOS 8 and RedHat 8
- Added acceptance test  nodes for Centos8 and Redhat 8
- Removed $:: from top level variables.
- Removed tests for Puppet 4 from travis.yml.
- Bumped upper bound for simp-simplib to < 5.0.0

* Fri Jun 28 2019 Steven Pritchard <steven.pritchard@onypoint.com> - 2.5.0-0
- Add v2 compliance_markup data
- Add support for puppetlabs-stdlib 6

* Fri Jun 14 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.4.1-0
- Ensure that the selinux::login_resources Hash performs a deep merge by
  default.

* Fri Apr 05 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.4.0-0
- Add `selinux::kernel_enforce` for toggling the enforcement of the selinux
  state at the kernel command line.
- Switch the /etc/selinux/config template over to EPP format.
- Deprecate Puppet 4 support
- Add Puppet 6 support

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.1-0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Mon Sep 10 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.0-0
- Update Hiera 4 to Hiera 5

* Mon Jul 09 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.3.0-0
- Adds a `selinux_login` custom type that provides for the management of login
  to user role mappings.
- Incorporated the fork of the `voxpupuli-selinux` module as `simp-vox_selinux`
  without conflict
- Add support for OEL and Puppet 5
- Fix bug with enforcement switching in the native type

* Mon Apr 23 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 2.2.0-0
- simp_options::selinux was supposed to indicate if the selinux module should
  be included. Class include lists set in the simp module would include selinux
  regardless of this setting.  This option was also being used to set the state