@@ -19,7 +19,14 @@ HOSTS:
     roles:
       - client
     platform:   el-7-x86_64
-    box:        onyxpoint/oel-7-x86_64
+    box:        generic/oracle7
+    hypervisor: <%= hypervisor %>
+
+  oel8:
+    roles:
+      - client
+    platform:   el-8-x86_64
+    box:        generic/oracle8
     hypervisor: <%= hypervisor %>
 
 CONFIG:
